<resources>
    <string name="app_name">金草</string>
    <string name="app_tab_home">首页</string>
    <string name="app_tab_user">用户</string>
    <string name="app_tab_message">消息</string>
    <string name="app_tab_mine">我的</string>
    <string name="def_back_left_con">""</string>
    <string name="def_back_right_con">""</string>
    <string name="app_home_title">金草中医</string>
    <string name="app_home_user">用户</string>
    <string name="app_home_mssage">消息</string>
    <string name="app_home_mine">我的</string>
    <string name="app_system_setting">系统设置</string>
    <string name="app_determine_btn">确定</string>
    <string name="app_cancel_btn">取消</string>
    <string name="app_code_btn">验证码登录</string>
    <string name="app_password_btn">密码登录</string>
    <string name="app_login_btn">登  录</string>
    <string name="app_register_btn">注  册</string>
    <string name="app_forget_password">忘记密码?</string>
    <string name="app_register_title">注册</string>
    <string name="app_login_title">登录</string>
    <string name="app_login_right_title">注册</string>
    <string name="app_sex_man">男</string>
    <string name="app_sex_gril">女</string>
    <string name="app_photo">相册</string>
    <string name="app_camera">相机</string>
    <string name="app_city">选择城市</string>
    <string name="app_message_notify">消息提醒</string>
    <string name="app_doctor_message">公开个人信息</string>
    <string name="app_medicinal_materials">公开药材剂量</string>
    <string name="app_follow_up_sheet">自动发随访单</string>
    <string name="app_wifi_play">仅WiFi环境播放</string>
    <string name="app_change_password">修改密码</string>
    <string name="app_clear_cache">清除缓存</string>
    <string name="app_version_information">版本信息</string>
    <string name="app_service_agreement">服务协议</string>
    <string name="app_privacy_policy">隐私政策</string>
    <string name="app_login_out">退 出</string>
    <string name="app_doctorProtocol"><u>《金草中医医生协议》</u></string>
    <string name="title_online_prescribing">线上开方</string>
    <string name="title_camera_prescribing">拍照开方</string>
    <string name="fragment_mine_study">我的学习</string>
    <string name="fragment_mine_doctor_name">医生姓名</string>
    <string name="fragment_mine_attention">我的关注</string>
    <string name="fragment_mine_courses">我的购课</string>
    <string name="fragment_mine_integral">我的积分</string>
    <string name="fragment_mine_account">我的账户</string>
    <string name="fragment_mine_evaluation">我的评价</string>
    <string name="fragment_mine_diagnosis">收益设置</string>
    <string name="fragment_mine_voucher">我的优惠券</string>
    <string name="fragment_mine_address">我的地址</string>
    <string name="fragment_mine_operation_question">常见问题</string>
    <string name="fragment_mine_operation_service">联系我们</string>
    <string name="fragment_mine_feedback_doctor">意见反馈</string>
    <string name="fragment_mine_about_me">关于金草</string>
</resources>